@@ -66,6 +66,8 @@ PIG-4333: Split BigData tests into multiple groups (rohini)
  
 BUG FIXES
 
+PIG-4496: Fix CBZip2InputStream to close underlying stream (petersla via daijy)
+
 PIG-4528: Fix a typo in src/docs/src/documentation/content/xdocs/basic.xml (namusyaka via daijy)
 
 PIG-4532: Pig Documentation contains typo for AvroStorage (fredericschmaljohann via daijy)
